# library-managment

./: .gitignore  Dockerfile  LICENSE  README.md  libary.db  main.py  pyproject.toml  requirements.txt
app/: containers.py  models.py  routes.py  schemas.py
app/repositories/: author.py  book.py  db_session_handler.py  library.py  rental.py  user.py
app/services/: author.py  book.py  library.py  rental.py  user.py
tests/: test_routes.py
